# coursework_03

./: README.md  main.py  pyproject.toml
classes/: operations.py
src/: operations.json
utils/: files.py  functions.py
